--- a/source/stylesheets/components/_card.scss
+++ b/source/stylesheets/components/_card.scss
@@ -7,6 +7,11 @@
   position: relative;
   margin-top: 25px;
   margin-bottom: 100px;
+  border-radius: 3px;
+  box-shadow: 1px 2px 4px rgba(0,0,0,0.4);
+  .rating {
+  font-size: 14px;
+}
 }
 .card-user {
   position: absolute;
@@ -26,14 +31,14 @@
   position: absolute;
   bottom: 10px;
   left: 10px;
-}
-.card-description h2 {
+h2 {
   font-size: 24px;
 }
-.card-description p {
+p {
   font-size: 14px;
   opacity: 0.7;
   font-weight: lighter;
+}
 }
 .card-link {
   position: absolute;
@@ -44,11 +49,7 @@
   z-index: 2;
   background: black;
   opacity: 0;
-}
-.card-link:hover {
+&:hover {
   opacity: 0.1;
 }
-
-.card .rating {
-  font-size: 14px;
 }
