--- a/source/stylesheets/config/_colors.scss
+++ b/source/stylesheets/config/_colors.scss
@@ -1,8 +1,9 @@
 // Define variables for your color scheme
 
 // For example:
-$red: #EE5F5B;
-$blue: #469AE0;
+$red: #D63932;
+$blue: #076F8A;
+$light-blue: #54B0BD;
 $yellow: #FDB631;
 $orange: #E67E22;
 $green: #32B796;
